<resources>
    <string name="app_name">FirstDaySummerPructise</string>
    <string name="first_name">Name</string>
    <string name="second_name">Surname</string>
    <string name="subscribe">Subscribe</string>
    <string name="send_message">Message</string>
    <string name="note_head">Your note</string>
    <string name="note_hint">A note about this user. It will be visible only to you. Click to enter the text</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="empty_field">Empty</string>
    <string name="main">Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>